This is simple html page using javascript

--- a/site/index.html
+++ b/site/index.html
@@ -4,6 +4,15 @@
 	<title></title>
 </head>
 <body>
-	<h1>Hello Sanket! How Are You</h1>
+	<h1 style="color: blue; text-align: center; font-size: 60px">HTML is very Simple</h1>
+	<p style="margin: 0 200px 0 200px; font-size: 1.5em;">ipsum asdjgdkhahdy uhksjbu usdkudd sdvlks</p>
+	<p style="text-align: center;">ksbdhb udhiaub cokdpo njasyg ttw lds</p>
+	<footer>
+		<hr>
+		<p style="text-align: center;"
+			onclick="alert('Emailing us is useless')";>
+			Tecsjk udj: yeah.right2server-is-down.com
+		</p>
+	</footer>
 </body>
 </html>
